feat: implement grid/square generation in js file

--- a/index.html
+++ b/index.html
@@ -6,19 +6,12 @@
     <title>Etch-a-Sketch</title>
 
     <link href="./style.css" rel="stylesheet">
+    <script src="./javascript.js" defer></script>
 </head>
 <body>
 
     <div class='box-grid'>
-        <div class="column">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-        </div>
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
+        
     </div>
     
 </body>
