--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <script src="./javascript.js" defer></script>
 </head>
 <body>
-
-    <div class='box-grid'>
-        
+    <div class="button-holder">
+        <button id="clear">Clear</button>
+        <button id="resize">Resize</button>
     </div>
-    
+    <div class='box-grid'></div>
+    <div></div>
+
 </body>
 </html>
