--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <button id="clear">Clear</button>
         <button id="resize">Resize</button>
     </div>
-    <div class='box-grid'></div>
+    <div class='box-grid'>
+    </div>
     <div></div>
 
 </body>
